Correcciones de Dispositivos

--- a/src/app/components/cards-buttons/cards-buttons.component.html
+++ b/src/app/components/cards-buttons/cards-buttons.component.html
@@ -6,15 +6,16 @@
         <ion-card-header class="ion-text-center ion-padding">
           <ion-icon  class="ion-icon-myaccounts"  name="card-outline"></ion-icon>
         </ion-card-header>
-        <ion-card-content class="ion-text-center text-size no-padding">
-          {{'MYACCOUNTS' | translate}}
+        <ion-card-content class="ion-text-center text-size-account no-padding">
+          {{'MY' | translate}} <br>
+          {{'MYACCOUNTS'| translate}}
         </ion-card-content>
       </ion-card>
     </ion-col>
     <ion-col>
-        <ion-card routerLink="/applyfor-loan" class="ion-card ion-card-qr" color="sectionbutton">
-          <ion-card-header class="ion-text-center ion-padding">
-            <ion-img style="max-width: 30px;margin-left: 10px;margin-bottom: 8px;" src="/assets/img/icon/lucro.svg"></ion-img>
+        <ion-card routerLink="/applyfor-loan" class="ion-card ion-card-loan" color="sectionbutton">
+          <ion-card-header class="ion-text-center ion-text-loan ion-padding">
+            <ion-img class="ion-icon-loan" style="max-width: 30px;margin-left: 10px;margin-bottom: 8px;" src="/assets/img/icon/lucro.svg"></ion-img>
           </ion-card-header>
           <ion-card-content class="ion-text-center text-size no-padding">
             {{'APPLYLOAN' | translate}}
