--- a/src/app/pages/references/references.page.html
+++ b/src/app/pages/references/references.page.html
@@ -30,7 +30,7 @@
     <div *ngIf="!references">
       <ion-card class="ion-padding" style="width: 95%;height: 20%;" *ngFor="let item of [1,1,1]">
         <ion-item lines="none">
-          <ion-avatar>
+          <ion-avatar class="ion-avatar">
             <ion-skeleton-text animated></ion-skeleton-text>
           </ion-avatar>
           <label>
