--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,9 +62,10 @@ div{
       background-color: transparent;
       background-color: none;
   }
+
   ion-avatar{
-      width: 4rem;
-      height: 4rem;
+      width: 3.5rem;
+      height: 3.5rem;
       margin-top: 1.5rem!important;
       margin-left: -16px!important;
   }
@@ -72,6 +73,26 @@ div{
 @media (min-width:1023px) and (max-width:1024px){
     ion-menu{
         --width:500px!important;
+    }
+    ion-label{
+        margin-left: 3.3rem!important;
+    }
+    .img{
+        //background-image:url("../../../assets/img/bg-header-login.jpg"bg-header-login.jpg") no-repeat !important;
+       // background: url("/assets/img/img-menu.jpg") no-repeat !important;
+        opacity: .5;
+        width: 100%;
+        height: 300px!important;
+        //width: 100%;
+       // position: relative;
+    
+      }
+
+      ion-avatar{
+        width: 6rem;
+        height: 6rem;
+        margin-top: 6rem!important;
+        margin-left: 20px!important;
     }
 
     .ion-item{
