--- a/src/app/pages/applyfor-loan/applyfor-loan.page.html
+++ b/src/app/pages/applyfor-loan/applyfor-loan.page.html
@@ -51,22 +51,22 @@
         <ion-select-option value="{{plazo_max}}">{{plazo_max}}</ion-select-option>
       </ion-select>
     </ion-item>-->
-    <ion-item style="margin-top: 10rem;" class="ion-select margin-top">
+    <ion-item style="margin-top: 10rem;" class="plazo ion-select margin-top">
       <ion-label position="floating" class="i-success">{{'DESIREDTERM' | translate}}:</ion-label>
       <ion-select  okText="{{'ACEPTAR'|translate}}" cancelText="{{'CANCEL'|translate}}" [(ngModel)]="clear" (ionChange)="onPlazo($event)" formControlName="plazo">
         <ion-select-option *ngFor="let item of plazoDeseado; let i=index" value="{{i}}">{{item.plazo}} {{item.valor | uppercase | translate}}</ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-item style="margin-top: 12px;" class="ion-select margin-top">
+    <ion-item style="margin-top: 12px;" class="frecuencia ion-select margin-top">
       <ion-label position="floating" class="i-success">{{'PAYMENTFREQUENCY' | translate}}:</ion-label>
-    <ion-select okText="{{'ACEPTAR'|translate}}" cancelText="{{'CANCEL'|translate}}" (ionChange)="onPago($event)"  formControlName="pagos">
+    <ion-select  okText="{{'ACEPTAR'|translate}}" cancelText="{{'CANCEL'|translate}}" (ionChange)="onPago($event)"  formControlName="pagos">
       <ion-select-option [disabled]="!selectSemana? false:item.valor!='Semanal'?true:false" *ngFor="let item of tipoFrecuencia; let i=index" value="{{i}}">{{item.valor | uppercase| translate}}</ion-select-option>
     </ion-select>
   </ion-item>
 
-  <ion-item style="margin-top: 12px;" class="ion-select margin-top">
+  <ion-item style="margin-top: 12px;" class="destino ion-select margin-top">
     <ion-label position="floating" class="i-success">{{'DESTINATIONOFTHELOAN' | translate}}:</ion-label>
-  <ion-select  cancelText="{{'CANCEL'|translate}}" interface="action-sheet" (ionChange)="onDestino($event)" formControlName="destino">
+  <ion-select  cancelText="{{'CAN'|translate}}" interface="action-sheet" (ionChange)="onDestino($event)" formControlName="destino">
     <ion-select-option  *ngFor="let item of destionPrestamo" value="{{item.id}}">{{item.valor | uppercase | translate}}</ion-select-option>
   </ion-select>
 </ion-item>
