--- a/src/app/pages/applyfor-loan/applyfor-loan.page.scss
+++ b/src/app/pages/applyfor-loan/applyfor-loan.page.scss
@@ -76,7 +76,7 @@ ion-list{
 }
 
 .div-son-2{
-    height: 26.5rem;
+    height: 25rem;
     background: #FFFF;
     position: absolute; 
     top: 10rem;
@@ -89,7 +89,7 @@ ion-list{
 .div-son-3{
     background:transparent;
     position: absolute; 
-    top: 38rem;
+    top: 37rem;
     z-index: 3;
     width: 100%;
 }
@@ -194,12 +194,67 @@ ion-card{
     background: #939396!important;
 }
 
-@media(min-width: 374px) and(max-width: 375px),
-(min-width: 413px) and(max-width: 414px){
+@media(min-width:359px) and (max-width: 360px){
+    .div-son-1{
+        height: 13.8rem;
+    }
+    .item{
+        margin-top: 2.4rem;
+    }
+    .plazo{
+        margin-top: 6rem!important;
+    }
+    
+    .div-son-2{
+        height: 19rem;
+        top: 8rem;
+    }
+    
+    .div-son-3{
+        top: 28rem;
+        z-index: 3;
+        width: 100%;
+    }
+}
+@media(min-width: 374px) and(max-width: 375px){
+    .div-son-1{
+        height: 13.8rem;
+    }
+    .item{
+        margin-top: 2.4rem;
+    }
+    .plazo{
+        margin-top: 6.3rem!important;
+    }
+
+    .frecuencia, .destino{
+        margin-top: 0px!important;
+    }
+    
+    .div-son-2{
+        height: 21rem;
+        top: 8rem;
+    }
+    
+    .div-son-3{
+        top: 29rem;
+    }
+}
+@media(min-width: 413px) and(max-width: 414px){
     .margin-top{
       margin-top: 0px!important;
     }
-  }
+    .plazo{
+        margin-top: 9rem!important;
+    }
+    .div-son-2{
+        height: 25rem!important;
+    }
+    .div-son-3{
+        top: 37rem;
+    }
+    
+}
 
 @media(min-width: 767px) and(max-width: 768px){
     .div-son-1{
