--- a/src/app/pages/detailloan/detailloan.page.scss
+++ b/src/app/pages/detailloan/detailloan.page.scss
@@ -13,3 +13,22 @@ ion-toolbar{
 ion-item{
     margin-top: -5px!important;
 }
+
+@media(min-width: 374px) and(max-width:375px),
+(min-width: 413px) and(max-width:414px){
+    .condicion{
+        margin-top: -10px!important;
+    }
+}
+
+@media(min-width: 767px) and(max-width:768px),
+(min-width: 1023px) and(max-width:1024px){
+    .condicion{
+        margin-top: 10px!important;
+    }
+    ion-item{
+        margin-top: 10px!important;
+    }
+    
+}
+
