Error de ver menu sin iniciar sesion

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,10 +3,10 @@
     <img id="img-selfie" src="../../../assets/icon/icono-conserva.png">
   </ion-avatar>
 
-  <div id="image"></div>
+  <div class="image"></div>
   
   <ion-card class="background-login margin-card-login" style="box-shadow: 0 0 0 0;">
-    <form [formGroup]="form_login" style="margin-bottom: 20%;">
+    <form [formGroup]="form_login" style="margin-bottom: 15%;">
       <ion-list class="background-login" style="margin-bottom: 10%;">
         <ion-item class="input-item" style="padding-bottom: 0px;">
           <ion-icon class="icono-centrado size-icon color-icon" slot="start" name="person-outline"></ion-icon>
