--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -24,7 +24,7 @@ ion-list.background-login{
     background-color: #043C80; 
     margin-top: 0px;
     position:absolute;
-    top: calc( ( 100% - 150px) / 3);
+    top: calc( ( 100% - 250px) / 3);
     left: calc( (100% - 100px) / 2 );
 }
 
@@ -41,9 +41,10 @@ ion-list.background-login{
     margin-left: 17%;
 }
 
-#image {
+.image {
     background-image:url("../../../assets/img/bg-header-login.jpg");
-    height: 32%;
+    height: calc( ( 100% - 130px)/3);;
+    //min-height: 230px;
     width:100%;
     background-size: 100% 100%;
     margin-bottom: 10%;
@@ -53,7 +54,7 @@ ion-list.background-login{
     .positionAvata{
         height: 180px;
         width: 180px;
-        top: calc( ( 100% - 250px) / 3);
+        top: calc( ( 100% - 340px) / 3);
         left: calc( (100% - 180px) / 2 );
     }
 
@@ -66,4 +67,9 @@ ion-list.background-login{
         width: 40px;
         height: 40px;
     }
+
+    .image {
+        height: 31%;
+    }
+    
 }
